feat: Integrating all in lambda function that resides in main-app module (not completed yet)