@@ -40,6 +40,12 @@
 				<plugin>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>3.5.4</version>
+					<configuration>
+						<argLine>
+							--add-opens java.base/java.util=ALL-UNNAMED
+							--add-opens java.base/java.lang=ALL-UNNAMED
+						</argLine>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -103,6 +109,13 @@
 			<artifactId>lombok</artifactId>
 			<version>${lombok.version}</version>
 			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.junit-pioneer</groupId>
+			<artifactId>junit-pioneer</artifactId>
+			<version>2.3.0</version>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
